# hermes-squad

./: .gitignore  README.md  pyproject.toml
src/hermes_squad/: __init__.py  cli.py  db.py  dispatch.py  mailbox.py  plugin.py  task_service.py  tools.py
src/hermes_squad/web/: __init__.py  routes.py  server.py
src/hermes_squad/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_mailbox.py  test_task_service.py
